[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/GameButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fonts/BalooTamma2-SemiBold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Fonts/StatsHeadingFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Fonts/CheckboxFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://Scenes/Game/Start.gd" type="Script" id=6]
[ext_resource path="res://Scripts/IntegerInput.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 52
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="Start" type="Node2D"]
script = ExtResource( 6 )
__meta__ = {
"_edit_vertical_guides_": [ 960.0, 600.0, 1320.0 ]
}

[node name="background" parent="." instance=ExtResource( 1 )]

[node name="Title" type="Label" parent="."]
margin_left = 760.0
margin_top = 80.0
margin_right = 1148.0
margin_bottom = 170.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "FALLING BLOCKS"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Disclaimer" type="Label" parent="."]
margin_left = 600.0
margin_top = 200.0
margin_right = 1320.0
margin_bottom = 400.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "This game is designed for research purposes. During gameplay, your keystrokes will be logged and your eye movements will be tracked and recorded.

If you agree with these conditions, you may proceed to the game."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AgreementCheckBox" type="CheckBox" parent="."]
margin_left = 600.0
margin_top = 340.0
margin_right = 720.0
margin_bottom = 460.0
focus_mode = 0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
text = "I agree"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="id_entry" type="Control" parent="."]
margin_left = 600.0
margin_top = 440.0
margin_right = 1320.0
margin_bottom = 620.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IdInput" type="LineEdit" parent="id_entry"]
margin_left = 280.0
margin_top = 120.0
margin_right = 440.0
margin_bottom = 144.0
align = 1
max_length = 4
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
placeholder_text = "0000"
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubjectId" type="Label" parent="id_entry"]
margin_top = 40.0
margin_right = 720.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Please enter your 4-digit player id."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" parent="." instance=ExtResource( 2 )]
margin_left = 880.0
margin_top = 780.0
margin_right = 1040.0
margin_bottom = 820.0
text = "PLAY"

[connection signal="toggled" from="AgreementCheckBox" to="." method="_on_AgreementCheckBox_toggled"]
[connection signal="text_validated" from="id_entry/IdInput" to="." method="_on_IdInput_text_validated"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
